k8s/kube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
spec:
  backend:
    serviceName: api-gateway
    servicePort: 8080
  rules:
  - http:
      paths:
      - path: /api/vet
        backend:
          serviceName: vets-service
          servicePort: 8083
      - path: /api/visit
        backend:
          serviceName: visits-service
          servicePort: 8082
      - path: /api/customer
        backend:
          serviceName: customers-service
          servicePort: 8081
      - path: /api/gateway
        backend:
          serviceName: api-gateway
          servicePort: 8080
